add tesseract for ios sample code

--- a/ios/tesseract/readme.html
+++ b/ios/tesseract/readme.html
@@ -9,9 +9,13 @@
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 14.0px Arial; color: #500050; background-color: #ffffff}
     p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 14.0px Arial; color: #500050; background-color: #ffffff; min-height: 16.0px}
-    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 14.0px 'Heiti SC Light'; color: #500050; background-color: #ffffff}
-    p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 14.0px Arial; color: #1155cc; background-color: #ffffff}
-    span.s1 {font: 14.0px 'Heiti SC Light'}
+    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 14.0px STSong; color: #500050; background-color: #ffffff}
+    p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 14.0px Arial; color: #0000ee; background-color: #ffffff}
+    p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 14.0px Arial; color: #0000ee; background-color: #ffffff; min-height: 16.0px}
+    p.p6 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: justify; line-height: 21.0px; font: 12.0px Courier; color: #eeeeee; background-color: #333333}
+    p.p7 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: justify; line-height: 21.0px; font: 12.0px Courier; color: #eeeeee; background-color: #333333; min-height: 14.0px}
+    p.p8 {margin: 0.0px 0.0px 0.0px 0.0px; font: 14.0px Arial; color: #1155cc; background-color: #ffffff; min-height: 16.0px}
+    span.s1 {font: 14.0px STSong}
     span.s2 {font: 14.0px Arial}
     span.s3 {text-decoration: underline}
   </style>
@@ -30,5 +34,31 @@
 <p class="p1">3<span class="s1">、</span>Tesseract</p>
 <p class="p4"><span class="s3"><a href="https://code.google.com/p/tesseract-ocr/downloads/list">https://code.google.com/p/tesseract-ocr/downloads/list</a></span></p>
 <p class="p4"><span class="s3"><a href="https://tesseract-ocr.googlecode.com/files/tesseract-ocr-3.02.02.tar.gz">https://tesseract-ocr.googlecode.com/files/tesseract-ocr-3.02.02.tar.gz</a></span></p>
+<p class="p5"><span class="s3"></span><br></p>
+<p class="p5"><span class="s3"></span><br></p>
+<p class="p5"><span class="s3"></span><br></p>
+<p class="p6">// Set up the tessdata path. This is included in the application bundle</p>
+<p class="p6">// but is copied to the Documents directory on the first run.</p>
+<p class="p6">NSArray *documentPaths = NSSearchPathForDirectoriesInDomains(NSDocumentDirectory, NSUserDomainMask, YES);</p>
+<p class="p6">NSString *documentPath = ([documentPaths count] &gt; 0) ? [documentPaths objectAtIndex:0] : nil;</p>
+<p class="p7"><br></p>
+<p class="p6">NSString *dataPath = [documentPath stringByAppendingPathComponent:@"tessdata"];</p>
+<p class="p6">NSFileManager *fileManager = [NSFileManager defaultManager];</p>
+<p class="p6">// If the expected store doesn't exist, copy the default store.</p>
+<p class="p6">if (![fileManager fileExistsAtPath:dataPath]) {</p>
+<p class="p6"><span class="Apple-converted-space">    </span>// get the path to the app bundle (with the tessdata dir)</p>
+<p class="p6"><span class="Apple-converted-space">    </span>NSString *bundlePath = [[NSBundle mainBundle] bundlePath];</p>
+<p class="p6"><span class="Apple-converted-space">    </span>NSString *tessdataPath = [bundlePath stringByAppendingPathComponent:@"tessdata"];</p>
+<p class="p6"><span class="Apple-converted-space">    </span>if (tessdataPath) {</p>
+<p class="p6"><span class="Apple-converted-space">        </span>[fileManager copyItemAtPath:tessdataPath toPath:dataPath error:NULL];</p>
+<p class="p6"><span class="Apple-converted-space">    </span>}</p>
+<p class="p6">}</p>
+<p class="p7"><br></p>
+<p class="p6">setenv("TESSDATA_PREFIX", [[documentPath stringByAppendingString:@"/"] UTF8String], 1);</p>
+<p class="p7"><br></p>
+<p class="p6">// init the tesseract engine.</p>
+<p class="p6">tesseract = new tesseract::TessBaseAPI();</p>
+<p class="p6">tesseract-&gt;Init([dataPath cStringUsingEncoding:NSUTF8StringEncoding], "eng");</p>
+<p class="p8"><br></p>
 </body>
 </html>
